Fixes modal left scroll; adds font and spacing

--- a/main.css
+++ b/main.css
@@ -2,16 +2,24 @@
 body {
   background-color: #413839;
   color: #ffffff;
+  font-family: 'Raleway', sans-serif;
+}
+
+.logo-main {
+  font-size: 40px;
+  margin-bottom: 10px;
 }
 
 .navbar-default {
   background-color: #000;
   border-color: #000;
   border-radius: 0px;
-  padding: 20px;
+  padding: 5px 40px 55px 40px;
 }
 .navbar-default .navbar-brand {
   color: #fff;
+  padding-top: 0;
+  margin-top: 0;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
